testcases/error_semicolon.output
user$ ./cmm testcases/error_semicolon.cmm 
syntax error
around line: 11
user$
